<resources>
    <string name="app_name">FitCheckSocialMedia</string>
    <string name="fit_check_logo">Fit Check</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_for_an_account">Register for an Account</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="clips">Clips</string>
</resources>