<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_yellow"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.75"
        android:scaleType="centerCrop"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/loginLogoBack"
        android:layout_width="350dp"
        android:layout_height="140dp"
        android:adjustViewBounds="true"
        android:alpha="0.8"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:shapeAppearance="@style/Octagon"
        app:srcCompat="@drawable/backround_shape_white" />

    <TextView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anomaly_regular"
        android:shadowColor="#997a45"
        android:shadowDx="10"
        android:shadowDy="15"
        android:shadowRadius="2"
        android:text="@string/fit_check_logo"
        android:textColor="@color/my_yellow"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/loginLogoBack"
        app:layout_constraintEnd_toEndOf="@id/loginLogoBack"
        app:layout_constraintStart_toStartOf="@id/loginLogoBack"
        app:layout_constraintTop_toTopOf="@id/loginLogoBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmail"
        style="@style/LoginTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:elevation="15dp"
        android:hint="@string/e_mail"
        android:textColorHint="@color/my_pink"
        app:hintTextAppearance="@android:style/TextAppearance.Small"
        app:hintTextColor="@color/my_purple"
        app:layout_constraintBottom_toTopOf="@id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/CutCorners">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caviar_dreams_bold"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPassword"
        style="@style/LoginTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="15dp"
        android:hint="@string/password"
        android:textColorHint="@color/my_pink"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@android:style/TextAppearance.Small"
        app:hintTextColor="@color/my_purple"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogoBack"
        app:layout_constraintVertical_bias="0.40"
        app:shapeAppearance="@style/CutCorners">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caviar_dreams_bold"
            android:inputType="textPassword"
            android:letterSpacing="0.1"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/my_purple"
        android:fontFamily="@font/caviar_dreams_bold"
        android:letterSpacing="0.1"
        android:text="@string/sign_in"
        android:textColor="@color/my_white"
        android:textSize="16sp"
        app:elevation="10dp"
        app:icon="@drawable/more_up"
        app:iconGravity="end"
        app:iconTint="@color/my_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword"
        app:shapeAppearance="@style/CutCorners"
        app:strokeColor="@color/my_white"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/registerButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/my_white"
        android:fontFamily="@font/caviar_dreams_bold"
        android:letterSpacing="0.1"
        android:text="@string/register_for_an_account"
        android:textColor="@color/my_black"
        android:textSize="16sp"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:shapeAppearance="@style/CutCorners"
        app:strokeColor="@color/my_pink"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>