<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/my_yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/registerBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.75"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/addProfilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_pink_white"
        android:elevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/newName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        app:shapeAppearance="@style/Octagon" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInput"
        android:id="@+id/newName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name"
        android:elevation="15dp"
        android:textColorHint="@color/my_pink"
        app:shapeAppearance="@style/CutCorners"
        app:hintTextColor="@color/my_purple"
        app:hintTextAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:fontFamily="@font/anomaly_regular"
            android:letterSpacing="0.1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInput"
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/e_mail"
        android:elevation="15dp"
        android:textColorHint="@color/my_pink"
        app:hintTextAppearance="@android:style/TextAppearance.Small"
        app:shapeAppearance="@style/CutCorners"
        app:hintTextColor="@color/my_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newName">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anomaly_regular"
            android:letterSpacing="0.1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInput"
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:elevation="15dp"
        android:textColorHint="@color/my_pink"
        app:shapeAppearance="@style/CutCorners"
        app:hintTextAppearance="@android:style/TextAppearance.Small"
        app:hintTextColor="@color/my_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newEmail"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anomaly_regular"
            android:textSize="16sp"
            android:letterSpacing="0.1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fontFamily="@font/anomaly_regular"
        android:letterSpacing="0.1"
        android:textColor="@color/my_white"
        android:textSize="16sp"
        android:backgroundTint="@color/my_purple"
        app:shapeAppearance="@style/CutCorners"
        app:icon="@drawable/more_up"
        app:iconGravity="end"
        app:iconTint="@color/my_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        android:layout_marginTop="20dp"
        android:text="@string/submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>